--- a/public/index.html
+++ b/public/index.html
@@ -75,12 +75,21 @@
           </div>
         </div>
       </div>
+
+      
+
+
       <div class="col-xs-6 col-sm-12">
 
         <div class="panel panel-default">
 
           <div class="panel-body" id="itinerary">
-            <div>
+            <div id='day-container' class='panel-heading'>
+             <button id="Day-1" class="btn btn-primary btn-circle ">1</button>
+             <button id="day-add" class="btn btn-primary btn-circle ">+</button> 
+            </div>
+            <div id='myStuff'>
+            <!--<div>
               <h4>My Hotel</h4>
               <ul class="list-group" id="hotels-list">
 
@@ -97,6 +106,7 @@
               <ul class="list-group" id="activities-list">
 
               </ul>
+            </div>-->
             </div>
           </div>
         </div>
