--- a/public/index.html
+++ b/public/index.html
@@ -83,11 +83,12 @@
 
         <div class="panel panel-default">
 
+          <div class='panel-heading'>
+            <span id='day-container'></span>
+            <button id="day-add" class="btn btn-primary btn-circle ">+</button> 
+            <button id="day-remove" class="btn btn-danger btn-sm pull-right">Delete</button> 
+          </div>
           <div class="panel-body" id="itinerary">
-            <div id='day-container' class='panel-heading'>
-             <button id="Day-1" class="btn btn-primary btn-circle ">1</button>
-             <button id="day-add" class="btn btn-primary btn-circle ">+</button> 
-            </div>
             <div id='myStuff'>
             <!--<div>
               <h4>My Hotel</h4>
