--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
           <div class='panel-heading'>
             <span id='day-container'></span>
             <button id="day-add" class="btn btn-primary btn-circle ">+</button> 
-            <button id="day-remove" class="btn btn-danger btn-sm pull-right">Delete</button> 
+            <button id="day-remove" class="btn btn-danger btn-sm pull-right">Delete Selected Day</button> 
           </div>
           <div class="panel-body" id="itinerary">
             <div id='myStuff'>
