--- a/public/index.html
+++ b/public/index.html
@@ -90,24 +90,7 @@
           </div>
           <div class="panel-body" id="itinerary">
             <div id='myStuff'>
-            <!--<div>
-              <h4>My Hotel</h4>
-              <ul class="list-group" id="hotels-list">
-
-              </ul>
-            </div>
-            <div>
-              <h4>My Restaurants</h4>
-              <ul class="list-group" id="restaurants-list">
-
-              </ul>
-            </div>
-            <div>
-              <h4>My Activities</h4>
-              <ul class="list-group" id="activities-list">
-
-              </ul>
-            </div>-->
+              <!--will be populated by javascript-->
             </div>
           </div>
         </div>
