--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,9 @@
             <div id='myStuff'>
               <!--will be populated by javascript-->
             </div>
+            <span id='submitField'>
+              <input id='saveField' type='text' placeholder ='Name you itinerary'></input>
+            </span>
           </div>
         </div>
       </div>
