--- a/public/index.html
+++ b/public/index.html
@@ -92,9 +92,10 @@
             <div id='myStuff'>
               <!--will be populated by javascript-->
             </div>
-            <span id='submitField'>
-              <input id='saveField' type='text' placeholder ='Name you itinerary'></input>
-            </span>
+              <div id='submitField' class="form-group">
+                <label for="saveField">Itinerary:</label>
+                <input id='saveField' class="form-control" type='text' placeholder ='Name your itinerary'></input>
+              </div>
           </div>
         </div>
       </div>
